# socks-hub

./: .gitignore  Cargo.toml  README.md  build-aarch64-apple-ios-debug.sh  build-aarch64-apple-ios.sh  build-apple-debug.sh  build-apple.sh  cbindgen.toml  config.json  genacl_proxy_gfw_bypass_china_ip.py
.github/workflows/: publish-exe.yml  rust.yml
scripts/: smoke_socks5.py  smoke_tcp_chain.py  smoke_tcp_direct.py  smoke_udp_chain.py  smoke_udp_direct.py
src/: api.rs  args.rs  base64_wrapper.rs  config.rs  dump_logger.rs  ffi.rs  http2socks.rs  httpproxy.rs  lib.rs  main.rs  socks2socks.rs  tokiort.rs
src/acl/: mod.rs  sub_domains_tree.rs
