[package]
name = "socks-hub"
version = "0.2.8"
license = "MIT"
repository = "https://github.com/ssrlive/socks-hub"
homepage = "https://github.com/ssrlive/socks-hub"
authors = ["ssrlive", "cssivision <cssivision@gmail.com>"]
description = "Convert http proxy or socks5 proxy to socks5 proxy."
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true

[lib]
name = "socks_hub_core"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "socks-hub"
required-features = ["sockshub", "acl"]

[features]
default = ["sockshub", "acl"]
acl = ["idna", "ipnet", "iprange", "regex", "socks5-impl", "tokio", "log"]
sockshub = [
    "ctrlc2",
    "env_logger",
    "serde",
    "serde_derive",
    "serde_json",
    "clap",
    "chrono",
    "http-body-util",
    "hyper",
    "dotenvy",
    "percent-encoding",
    "url",
    "httpproxy",
]
httpproxy = [
    "tokio",
    "log",
    "pin-project-lite",
    "base64easy",
    "socks5-impl",
    "hyper",
    "http-body-util",
    "tokio-util",
    "bytes",
]

[dependencies]
base64easy = { version = "0.1.7", optional = true }
bytes = { version = "1.12.1", optional = true }
cfg-if = "1.0.4"
chrono = { version = "0.4.45", optional = true }
clap = { version = "4.6.1", features = [
    "derive",
    "wrap_help",
], optional = true }
ctrlc2 = { version = "4.0.0", features = [
    "termination",
    "async",
], optional = true }
dotenvy = { version = "0.15.7", optional = true }
env_logger = { version = "0.11.11", optional = true }
http-body-util = { version = "0.1.4", optional = true }
hyper = { version = "1.10.1", features = ["full"], optional = true }
idna = { version = "1.1.0", optional = true }
ipnet = { version = "2.12.0", optional = true }
iprange = { version = "0.6.7", optional = true }
log = { version = "0.4.33", optional = true }
percent-encoding = { version = "2.3.2", optional = true }
pin-project-lite = { version = "0.2.17", optional = true }
regex = { version = "1.13.0", optional = true }
serde = { version = "1.0.228", optional = true }
serde_derive = { version = "1.0.228", optional = true }
serde_json = { version = "1.0.150", optional = true }
socks5-impl = { version = "0.9.4", default-features = false, features = [
    "client",
    "server",
    "serde",
], optional = true }
tokio = { version = "1.52.3", features = ["full"], optional = true }
tokio-util = { version = "0.7.18", optional = true }
url = { version = "2.5.8", optional = true }
